--- a/views/user/contact_us.ejs
+++ b/views/user/contact_us.ejs
@@ -14,15 +14,10 @@
 
       <%- include("./layout/contact/meet_the_owners.ejs") %>
 
-      <div class="our_clients_contact_wrapper">
-
-        <img class = "wave_contact_img" src = "./../assets/images/wave_l.png"/>
-
-        <%- include("./layout/our_clients.ejs") %>
-
-      </div>
-
       <%- include("./layout/contact/what_we_do.ejs") %>
+
+        <%- include("./layout/contact/before_and_after.ejs") %>
+
 
     </div>
 
@@ -32,4 +27,5 @@
     <%- include("./layout/footer.ejs") %>
   </div>
 
+<script src = "./assets/js/before_and_after.js"></script>
   <%- include("./layout/end.ejs") %>
