--- a/views/user/layout/new_our_clients.ejs
+++ b/views/user/layout/new_our_clients.ejs
@@ -7,15 +7,15 @@
       <!-- <img class="our_clients_arrow our_clients_arrow--right" src ="./assets/images/right-arrow.png"/>
       <img class="our_clients_arrow our_clients_arrow--left" src ="./assets/images/right-arrow.png"/> -->
 
-      <div class="our_clients_col our_clients_col--main" >
+      <div class="our_clients_col main_col our_clients_col--main" >
 
         <div class="our_clients_main_box" >
             <div class="row our_clients_row_inner">
-              <div class="col-6 our_clients_col_inner">
+              <div class="col-6 our_clients_col_inner box_col--top box_col">
                 <img class="client_image"  src = './assets/images/pj_.jpg'/>
               </div>
-              <div class="col-6 padding-5">
-                <h1 class="main_box_heading"style="font-size:4rem;letter-spacing:2px">Pita Jungle</h1>
+              <div class="col-6 padding-5 box_col--bottom box_col mobile-padding-0">
+                <h1 class="main_box_heading">Pita Jungle</h1>
                 <p class="main_box_paragraph">
                    "Custom Facility Services has been cleaning our windows for over four years and have been very reliable and do a great job.
                    Managers and staff tell me they are are always excited when they come because they make our store's windows look spotless. I would highly recommend them to any business or residence  " <br/> <br />  Bassel Osmani - Founder <br/> Pita Jungle
@@ -27,14 +27,14 @@
 
       </div>
 
-      <div class="our_clients_col our_clients_col--left" style="">
+      <div class="our_clients_col main_col our_clients_col--left" style="">
 
         <div class="our_clients_main_box">
             <div class="row our_clients_row_inner">
-              <div class="col-6 our_clients_col_inner">
+              <div class="col-6 box_col--top box_col our_clients_col_inner">
                 <img class="client_image" src = './assets/images/sims_.jpg'/>
               </div>
-              <div class="col-6 padding-5">
+              <div class="col-6 box_col--bottom box_col padding-5">
                 <h1 class="main_box_heading">Sims Business Systems</h1>
                 <p class="main_box_paragraph">"They clean our offices's windows fast and effectively. The window cleaners are also very friendly with the staff and do a good job of not getting in anyone's way while they are working. I use them very frequently and they are consistent in doing a good job everytime. " <br/> <br />  Mark Sims - CEO <br/> Sims Business Systems       </p>       </div>
 
@@ -44,14 +44,14 @@
 
       </div>
 
-      <div class="our_clients_col our_clients_col--right" >
+      <div class="our_clients_col main_col our_clients_col--right" >
 
         <div class="our_clients_main_box">
             <div class="row our_clients_row_inner">
-              <div class="col-6 our_clients_col_inner"">
+              <div class="col-6 box_col--top box_col our_clients_col_inner"">
                 <img class="client_image"src = './assets/images/art_.jpg'/>
               </div>
-              <div class="col-6 padding-5">
+              <div class="col-6 box_col--bottom box_col padding-5">
                 <h1 class="main_box_heading">Rachel's Art Studio </h1>
                 <p class="main_box_paragraph">"The window cleaner from this company are are very personable and easy to chat with. They are also very flexible and are very happy to work with one's schedule. Everytime I have scheduled with them they are happy to come and show up on time. I would highly recommend them to any business!"  <br/> <br />  Rachel - Owner <br/> Rachel's Art Studio</p>
               </div>
@@ -62,7 +62,7 @@
       </div>
 
       <div class="row our_client_buttons">
-          <div class="col-4"></div>
+          <div class="col-4 bcl"></div>
           <div class="col-4">
                 <div class="button_col_our_clients">
 
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div class='col-4'></div>
+            <div class='col-4 bcl'></div>
       </div>
 
   </div>
