--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -159,7 +159,7 @@ span{
 
 @media screen and (max-width:890px){
   .cfs-heading-container{
-    width:100%;
+    width:160%;
   }
 
   .showcase_banner{
@@ -200,6 +200,8 @@ span{
   }
   .home_quote_container{
     top:90%;
+    width:90%;
+    left:5%;
   }
   .showcase_banner{
       height:7.5vh;
