--- a/public/assets/css/new_our_clients.css
+++ b/public/assets/css/new_our_clients.css
@@ -158,8 +158,13 @@ width: 100%;
       transform: scale(1.05) translateX(20%);
 
     }
+    .our_clients_col--main_{
+      transform: scale(1.05) translateX(20%);
+      transition: transform .4s !important;
+    }
     .our_clients_overlay{
           height: 55vh;
+          width:10%;
           background-image: linear-gradient(to bottom, rgba(3, 77, 118, 1), rgba(3, 77, 118, .5),rgba(3, 77, 118, 0));
     }
     .our_client_buttons{
@@ -174,7 +179,20 @@ width: 100%;
       margin-left: 10%;
     }
     .our_clients_col--right{
-      transform: scale(1) translateX(125%)
+      transform: scale(1) translateX(125%);
+
+    }
+    .our_clients_col--right_{
+      transform: scale(1) translateX(125%);
+      transition: transform .4s !important;
+
+
+    }
+    .our_clients_col--left_{
+      transform: scale(1) translateX(-35%);
+      transition: transform .4s !important;
+
+
     }
     .new_our_clients_row{
       position: relative;
