--- a/public/assets/css/new_our_clients.css
+++ b/public/assets/css/new_our_clients.css
@@ -194,6 +194,9 @@ width: 100%;
 
 
     }
+    .our_client_button--2{
+      visibility: hidden;
+    }
     .new_our_clients_row{
       position: relative;
       height: 45vh;
