--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -465,14 +465,15 @@ padding-left: 5% !important;
   }
   .contact_section_title {
     width:90%;
+    font-size:3rem;
   }
 
   .contact_info_section--number {
-    font-size: 5rem !important;
+    font-size: 3rem !important;
     width: 70% !important;
 }
 .contact_info_section--email {
-  font-size: 3rem !important;
+  font-size: 2.5rem !important;
   width: 90% !important;
 }
   .gallery_img{
