--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -289,7 +289,7 @@
 
   text-align:left;
   width:50%;
-  font-size: 4.5rem !important;
+  font-size: 4.5rem ;
 font-family: "montserrat";
 font-weight: 500;
 width:50% !important;
@@ -361,12 +361,12 @@ width:100%;
 }
 
 .contact_info_section--email{
-  font-size: 5rem !important;
+  font-size: 5rem ;
 font-family: "montserrat";
 font-weight: 500;
 width:70% !important;
 text-align: left !important;
-padding-left: 5% !important;
+padding-left: 5% ;
 }
 .dropdown_arrow{
   width:50%;
@@ -412,10 +412,10 @@ padding-left: 5% !important;
   font-weight: 500;
   letter-spacing: 5px;
   text-transform: uppercase;
-  font-size:7rem !important;
-  width:65% !important;
-  text-align: left !important;
-  padding-left: 5% !important;
+  font-size:7rem ;
+  width:65% ;
+  text-align: left ;
+  padding-left: 5% ;
 }
 @media screen and (max-width:680px){
   .home_quote_container{
