--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -403,7 +403,7 @@ padding-left: 5% ;
   font-weight: 500;
   padding-left:10% !important;
   text-transform: uppercase;
-  font-size:5rem !important;
+  font-size:5rem;
   width:45% !important;
   text-align: left !important;
 }
