--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -464,6 +464,7 @@ padding-left: 5% ;
     text-align: center;
   }
   .contact_section_title {
+    margin-top:10%;
     width:95% !important;
     font-size:2.6rem !important;
   }
@@ -473,7 +474,7 @@ padding-left: 5% ;
     width: 70% !important;
 }
 .contact_info_section--email {
-  font-size: 2.6rem !important;
+  font-size: 2.2rem !important;
   width: 95% !important;
 }
   .gallery_img{
