--- a/public/assets/css/new_our_clients.css
+++ b/public/assets/css/new_our_clients.css
@@ -168,6 +168,8 @@ width: 100%;
           background-image: linear-gradient(to bottom, rgba(3, 77, 118, 1), rgba(3, 77, 118, .5),rgba(3, 77, 118, 0));
     }
     .our_client_buttons{
+      z-index:99;
+
       position: absolute;
       top: 155%;
       width: 100%;
