--- a/views/user/layout/new_our_clients.ejs
+++ b/views/user/layout/new_our_clients.ejs
@@ -17,8 +17,8 @@
               <div class="col-6 padding-5 box_col--bottom box_col mobile-padding-0">
                 <h1 class="main_box_heading">Pita Jungle</h1>
                 <p class="main_box_paragraph">
-                   "Custom Facility Services has been cleaning our windows for over four years and have been very reliable and do a great job.
-                   Managers and staff tell me they are are always excited when they come because they make our store's windows look spotless. I would highly recommend them to any business or residence  " <br/> <br />  Bassel Osmani - Founder <br/> Pita Jungle
+                   "Custom Facility Services has been cleaning our windows for over four years and do a great job.
+                   Managers tell me they are are always excited when they come because they make our store's windows look spotless. I would recommend them to any business or residence  " <br/> <br />  Bassel Osmani - Founder <br/> Pita Jungle
                  </p>
               </div>
             </div>
