--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -170,6 +170,8 @@ a:hover{
 
   .about_description{
     font-size:2rem;
+    text-align: center !important;
+
   }
 
   .what_we_do_description{
@@ -184,7 +186,7 @@ a:hover{
   }
 
   .about_container{
-    margin-top:20% !important;
+    margin-top:15% !important;
   }
 
   .about_description{
@@ -194,9 +196,10 @@ a:hover{
   .what_we_do_col{
     padding:10%;
   }
-.about_title{
-  font-size:4rem;
-}
+
+  .about_title{
+    font-size:4rem;
+  }
   .what_we_do_image{
     height:100rem !important;
     width:100rem;
@@ -204,10 +207,11 @@ a:hover{
 
   .value_row{
     padding:5%;
-    height:205vh;
-    max-height:205vh;
+    height:245vh;
+    max-height:245vh;
     padding-top: 0% !important;
   }
+
   .value_col{
     margin-top:0%;
   }
