--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -171,7 +171,8 @@ a:hover{
   .about_description{
     font-size:2rem;
     text-align: center !important;
-
+    width:90% !important;
+    margin-left:5%;
   }
 
   .what_we_do_description{
@@ -186,7 +187,7 @@ a:hover{
   }
 
   .about_container{
-    margin-top:15% !important;
+    margin-top:7.5% !important;
   }
 
   .about_description{
@@ -207,8 +208,8 @@ a:hover{
 
   .value_row{
     padding:5%;
-    height:245vh;
-    max-height:245vh;
+    height:265vh;
+    max-height:265vh;
     padding-top: 0% !important;
   }
 
