--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -258,6 +258,8 @@ a:hover{
   .what_we_do_container{
     margin-top:0%;
     height:110vh !important;
+    background-image:linear-gradient(to bottom,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .5),url('./../images/what_we_do_new.png');
+
   }
 
 }
