--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -267,7 +267,7 @@ a:hover{
   .what_we_do_container{
     margin-top:0%;
     height:140vh !important;
-    background-image:linear-gradient(to bottom,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .5),url('./../images/what_we_do_new.png');
+    background-image:linear-gradient(to bottom,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .5)),url('./../images/what_we_do_new.png') !important;
 
   }
 
