--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -260,7 +260,7 @@ a:hover{
   .what_we_do_link{
     font-size:2rem !important;
     letter-spacing:3px;
-    text-align: center;
+    text-align: justify;
     margin-left:25%;
     width:50% !important;
 
