--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -352,7 +352,7 @@ padding-bottom:75%
     margin-left:25%;
   }
   .meet_owners_container{
-      margin-top:185%;
+      margin-top:10% !important;
       position: relative;
       z-index:99999999999999999999;
 
