--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -364,11 +364,26 @@ padding-bottom:75%
     text-align: center !important;
     width:100%;
   }
+  .work_inner_container{
+    margin-top: -1%;
+background-image: linear-gradient( to right bottom, rgba(56, 182, 255, 1),rgba(37, 98, 159, 1), rgba(56, 182, 255, 1)) !important;
+padding-top: 5%;
+z-index:-99;
+position: relative;
+padding-bottom: 10%;
+width: 100%;
+  }
   .meet_owner_description{
     text-align: justify;
     font-size: 2.5rem;
     font-family: "Akrobat";
     color:white;
+  }
+  .work_row{
+    margin-top: 10% !important;
+  }
+  .work_col{
+        height: 20vh !important;
   }
   .meet_owner_col{
     width:100%;
@@ -389,7 +404,10 @@ padding-bottom:75%
     margin-top:0%;
   }
   .work_heading{
-    width:75%;
+    width:90% !important;
+    margin-top: 5%;
+    margin-left: 5%;
+    background:none !important;
   }
   .work_row{
     margin-top:20%;
@@ -409,6 +427,7 @@ padding-bottom:75%
   width:90%;
   margin-left:5%;
 }
+
 }
 /*
 @media screen and  (orientation:landscape) and (max-width:1000px){
