--- a/views/user/layout/contact/before_and_after.ejs
+++ b/views/user/layout/contact/before_and_after.ejs
@@ -13,10 +13,10 @@
       </div>
   </div>
 
-  <div class="image_wrapper_before_and_after">
+  <div class="image_wrapper_before_and_after before_and_after_col--1">
   <div class="row">
-    <div class="col-4">
-        <div class="image_container_before_and_after">
+    <div class="col-4 before_and_after_col">
+        <div class="image_container_before_and_after image_container_before_and_after--1">
             <div class="image_container_before_and_after_inner">
                 <div class="image_side--before image_side">
                     <img class="width-100 image_el image_el--front" src = "./assets/images/before_1.png"/>
@@ -33,8 +33,8 @@
     <div class="col-4">
 
     </div>
-    <div class="col-4">
-      <div class="image_container_before_and_after">
+    <div class="col-4 before_and_after_col before_and_after_col--2">
+      <div class="image_container_before_and_after image_container_before_and_after--2">
           <div class="image_container_before_and_after_inner">
               <div class="image_side--before image_side">
                   <img class="width-100 image_el image_el--front" src = "./assets/images/before_7.png"/>
@@ -54,8 +54,8 @@
     <div class="col-4">
 
     </div>
-    <div class="col-4">
-      <div class="image_container_before_and_after">
+    <div class="col-4 before_and_after_col before_and_after_col--3">
+      <div class="image_container_before_and_after image_container_before_and_after--3">
           <div class="image_container_before_and_after_inner">
               <div class="image_side--before image_side">
                   <img class="width-100 image_el image_el--front" src = "./assets/images/before_3.png"/>
