--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -43,7 +43,7 @@
   height:60vh;
   position: absolute;
   backface-visibility: hidden;
-  transition: all .5s;
+  transition: transform .5s;
 
 }
 .image_el{
