--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -364,6 +364,7 @@ padding-bottom:75%
   .meet_owner_name{
     text-align: center !important;
     width:100%;
+    margin-top:0%;
   }
   .work_inner_container{
     margin-top: -1%;
@@ -383,6 +384,7 @@ width: 100%;
   .banner_flip_inner {
     width: 90%;
     margin-left: 5%;
+    margin-top:5%;
 
   }
   .before_and_after_box_background {
