--- a/public/assets/css/about.css
+++ b/public/assets/css/about.css
@@ -276,6 +276,13 @@ a:hover{
     background-image:linear-gradient(to bottom,rgba(0, 35, 50, 1),rgba(0, 35, 50, 1),rgba(0, 35, 50, .5)),url('./../images/what_we_do_new.png') !important;
 
   }
+  .what_we_do_link {
+    font-size: 2rem !important;
+    letter-spacing: 3px;
+    text-align: center;
+    margin-left: 0% !important;
+        width: 40% !important;
+}
 
 }
 
