--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -359,6 +359,7 @@ padding-bottom:75%
   }
   .meet_owner_banner{
     width:80%;
+    margin-top: 5%;
   }
   .showcase_background {
     height:70vh !important;
