--- a/views/user/layout/about/values.ejs
+++ b/views/user/layout/about/values.ejs
@@ -1,7 +1,7 @@
 
     <div class="row value_row">
 
-      <div class="col-1 mobile-col-0"></div>
+      <div class="col-1 value_divide"></div>
 
       <div class="col-10 mobile-col-12 value_col">
 
