--- a/views/user/layout/contact/before_and_after.ejs
+++ b/views/user/layout/contact/before_and_after.ejs
@@ -1,5 +1,7 @@
 <div class="new_before_and_after_container"style="height:110vh;position:relative;margin-top:-15%">
   <div class="before_and_after_box_background"></div>
+  <div class="before_and_after_box_background--2 "></div>
+
   <div class="before_and_after_box_background before_and_after_box_background--2"></div>
 
   <div class="banner_flip_container">
@@ -13,9 +15,9 @@
       </div>
   </div>
 
-  <div class="image_wrapper_before_and_after before_and_after_col--1">
+  <div class="image_wrapper_before_and_after ">
   <div class="row">
-    <div class="col-4 before_and_after_col">
+    <div class="col-4 before_and_after_col before_and_after_col--1">
         <div class="image_container_before_and_after image_container_before_and_after--1">
             <div class="image_container_before_and_after_inner">
                 <div class="image_side--before image_side">
@@ -26,12 +28,6 @@
                 </div>
             </div>
         </div>
-    </div>
-
-  </div>
-  <div class="row ">
-    <div class="col-4">
-
     </div>
     <div class="col-4 before_and_after_col before_and_after_col--2">
       <div class="image_container_before_and_after image_container_before_and_after--2">
@@ -44,15 +40,6 @@
               </div>
           </div>
       </div>
-    </div>
-
-  </div>
-  <div class="row ">
-    <div class="col-4">
-
-    </div>
-    <div class="col-4">
-
     </div>
     <div class="col-4 before_and_after_col before_and_after_col--3">
       <div class="image_container_before_and_after image_container_before_and_after--3">
@@ -67,6 +54,9 @@
       </div>
     </div>
 
+
+
   </div>
+
 </div>
 </div>
