--- a/public/assets/css/contact.css
+++ b/public/assets/css/contact.css
@@ -438,11 +438,11 @@ width: 100%;
     margin-top:2.5%;
   }
   .before_and_after_box_background--2 {
-    width: 40%;
+    width: 0%;
     background: #024972;
     position: absolute;
     height: 125vh;
-    z-index: -1;
+    z-index: -100 !important;
     left: 0%;
     top: -15%;
 }
@@ -466,6 +466,7 @@ width: 100%;
   position: relative;
   z-index: 99;
 }
+
 .work_image_banner {
   width:100% !important;
 }
@@ -474,6 +475,14 @@ width: 100%;
   z-index:999999;
   position: relative;
   margin-top: 10%;
+  margin-left: 20%;
+
+}
+.before_and_after_col--1{
+
+  z-index:999999;
+  position: relative;
+  margin-top: 5%;
   margin-left: 20%;
 
 }
