--- a/public/assets/css/home.css
+++ b/public/assets/css/home.css
@@ -296,6 +296,11 @@ width:50% !important;
 text-align: left !important;
 padding-left: 5% !important;
 
+}#hq{
+  position: absolute;
+  top:70%;
+  left:5%;
+  width:80%;
 }
 .contact_info_section{
 
@@ -313,7 +318,7 @@ padding-left: 5% !important;
   left:5%;
   box-shadow: 0rem 2rem 5rem rgba(0,0,0,.5);
   transform: scale(1);
-  transition: transform .5s;
+  animation: quote 1 ease-in .5s;
 }
 .quote_submit_button{
   height:7.5vh;
@@ -416,6 +421,14 @@ padding-left: 5% ;
   width:65% ;
   text-align: left ;
   padding-left: 5% ;
+}
+@keyframes quote {
+  0%{
+    transform:scale(0)
+  }
+  100%{
+    transform: scale(1);
+  }
 }
 @media screen and (max-width:680px){
   .home_quote_container{
