--- a/public/assets/css/showcase.css
+++ b/public/assets/css/showcase.css
@@ -67,6 +67,7 @@
 .showcase_container{
   height:100vh;
   width:100%;
+  background-size: cover;
 }
 .showcase_container--home{
   background-image:linear-gradient(to right, rgba(3, 77, 118, 1),rgba(3, 77, 118, 1),rgba(3, 77, 118, .3)),url("./../images/showcase_1.png");
@@ -75,7 +76,7 @@
   background-image:linear-gradient(to right, rgba(3, 77, 118, 1),rgba(3, 77, 118, 1),rgba(3, 77, 118, .3)),url("./../images/contact_showcase.png");
 }
 .showcase_container--about{
-  background-image:linear-gradient(to right, rgba(3, 77, 118, 1),rgba(3, 77, 118, .5),rgba(3, 77, 118, .3)),url("./../images/about_showcase.png");
+  background-image:linear-gradient(to right, rgba(3, 77, 118, 1),rgba(3, 77, 118, .5),rgba(3, 77, 118, .3)),url("./../images/sl.jpg");
 }
 .showcase_container--schedule{
   background-image:linear-gradient(to right, rgba(3, 77, 118, 1),rgba(3, 77, 118, .8),rgba(3, 77, 118, .3)),url("./../images/showcase_1.png");
@@ -173,7 +174,7 @@ span{
   }
   .cfs-heading{
     margin-top:5%;
-    font-size:2.6rem;
+    font-size:2.2rem;
   }
   .showcase_container{
     margin-top: 5% !important;
