--- a/views/user/layout/head.ejs
+++ b/views/user/layout/head.ejs
@@ -25,6 +25,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Allerta+Stencil&family=Archivo+Black&family=Exo+2:wght@600&family=Exo:wght@800;900&family=Heebo:wght@800&family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,900;1,600&family=Noto+Sans:wght@300&family=Poppins:wght@600&family=Roboto+Condensed:wght@300;400&family=Roboto:ital,wght@0,300;1,100&family=Rubik+Distressed&family=Rubik+Moonrocks&family=Teko:wght@300;500&family=Vast+Shadow&family=Work+Sans:wght@200;300;400&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="./assets/css/contact.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/cfs_modal.css" />
+      <link rel="stylesheet" type="text/css" href="./assets/css/footer.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/icon-font.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/navbar.css" />
       <link rel="stylesheet" type="text/css" href="./assets/css/mobile_navbar.css" />
