--- a/views/user/layout/home/contact.ejs
+++ b/views/user/layout/home/contact.ejs
@@ -1,9 +1,9 @@
 <div class="contact_section">
-    <p class="contact_section_title text-banner "> Contact Us Today!</p>
+    <p class="contact_section_title text-banner text-left"> Contact Us Today!</p>
     <div class="contact_section_bluebox background-005"></div>
 </div>
 
 <div class="contact_info_section color-01 ">
-    <p class="text-banner contact_info_section--number ">489-822-0511 </p>
-    <p class="text-banner  contact_info_section--email ">info@customfacilityservices.com </p>
+    <p class="text-banner contact_info_section--number">489-822-0511 </p>
+    <p class="text-banner  contact_info_section--email">info@customfacilityservices.com </p>
 </div>
